# claude-code.el

./: .gitignore  Cask  Elsafile.el  Makefile  README.md  claude-code-ab-test.el  claude-code-adaptive.el  claude-code-agents.el  claude-code-ambient.el  claude-code-annotate.el  claude-code-commands.el  claude-code-config.el  claude-code-diff.el  claude-code-dynamic-tools.el  claude-code-edit-result.el  claude-code-emacs-tools.el  claude-code-events.el  claude-code-export.el  claude-code-fork-tree.el  claude-code-frame-render.el  claude-code-fringe.el  claude-code-git-graph.el  claude-code-lsp-link.el  claude-code-pkg.el  claude-code-process.el  claude-code-project-notes.el  claude-code-render.el  claude-code-self-heal.el  claude-code-stats.el  claude-code-test.el  claude-code-vars.el  claude-code-xwidget.el  claude-code.el  emacs-batch.sh
dev/: coverage.el  resolve-deps.el
python/: claude_code_backend.py  pyproject.toml  test_backend.py  test_integration.py
